[project]
name = "pyapply"
version = "0.0.1"
authors = [
  { name="Kirtan Soni", email="1kirtansoni@gmail.com" },
]
description = "Job application Assistant Module with LLM integration"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/kirtansoni/pyapply"
Issues = "https://github.com/kirtansoni/pyapply/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


